--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <title>::Condimentos::Malher::</title>
     <style> 
       /* @font-face {
-         font-family: Gotham ;
-         src: url('./assets/font/Gotham-bold.otf');
+         font-family: Intro ;
+         src: url('./assets/font/Intro-bold.otf');
       } */
 
       @font-face {
-        font-family: "Gotham";
-        src: url("./assets/font/Gotham-bold.otf") format("opentype");
+        font-family: "Intro";
+        src: url("./assets/font/Intro-Black.otf") format("opentype");
       }      
       
       </style>
@@ -38,8 +38,8 @@
     <script src=".src/SceneB.js"></script>
     <script src=".src/SceneA.js"></script>
     <script src=".src/init.js"></script>
-    <!-- <p style="font-family: Gotham">Nestle</p> -->
+    <!-- <p style="font-family: Intro">Nestle</p> -->
     <div id="container"></div>
-    <p style="font-family: Gotham">Nestle</p>
+    <p style="font-family: Intro">Malher</p>
 </body>
 </html>
