--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>::Condimentos::Malher::</title>
+    <meta name="description" content="Juego de condimentos Malher para tigres rojos.">
+    <meta property="og:title" content="Juego de condimentos Malher para tigres rojos." />
+    <meta property="og:image" content="https://https://condimentosmalher.web.app/assets/img/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/img/favicon.png"/>
+    <link rel="icon" type="image/png" href="https://https://condimentosmalher.web.app/assets/img/favicon.png"/>    
     <style> 
-      /* @font-face {
-         font-family: Intro ;
-         src: url('./assets/font/Intro-bold.otf');
-      } */
+        /* @font-face {
+          font-family: Intro ;
+          src: url('./assets/font/Intro-bold.otf');
+        } */
 
-      @font-face {
-        font-family: "Intro";
-        src: url("./assets/font/Intro-bold.otf") format("opentype");
-      }      
+        @font-face {
+          font-family: "Intro";
+          src: url("./assets/font/Intro-bold.otf") format("opentype");
+        }      
       
       </style>
-</head>
-<body>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146420039-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -38,6 +41,9 @@
     <script src=".src/SceneB.js"></script>
     <script src=".src/SceneA.js"></script>
     <script src=".src/init.js"></script>
+</head>
+<body>
+        
     <!-- <p style="font-family: Intro">Nestle</p> -->
     <div id="container"></div>
     <p style="font-family: Intro">Nestle</p>
