--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,12 @@
     <meta property="og:image" content="https://condimentosmalher.web.app/assets/img/favicon.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png"/>
     <link rel="icon" type="image/png" href="https://condimentosmalher.web.app/assets/img/favicon.png"/> 
-    <style> 
+    <style>
+      @font-face {
+        font-family: "Fontfabric";
+        src: url('./assets/font/Fontfabric.otf');
+      }
+
       @font-face {
         font-family: "Intro";
         src: url("./assets/font/Intro-Black.otf") format("opentype");
@@ -65,7 +70,7 @@
     <div id="container" style="align-self: center;">
       <input type="text" name="username" id="utext" style="position: absolute; top: 38%; left: 39%; height: 50px; width: 300px; font-size: 30px; text-align: center; display: none;"/>
     </div>
-    <p style="font-family: Intro; font-size: 0px;">Toledo</p>
+    <p style="font-family: FontFabric; font-size: 0px;">Toledo</p>
     <!----- HTML ----->
 </body>
 </html>
