--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.png"/>
     <link rel="icon" type="image/png" href="https://https://condimentosmalher.web.app/assets/img/favicon.png"/>    
     <style> 
-        /* @font-face {
-          font-family: Intro ;
-          src: url('./assets/font/Intro-bold.otf');
-        } */
+        @font-face {
+          font-family: "Fontfabric";
+          src: url('./assets/font/Fontfabric.otf');
+        }
 
         @font-face {
           font-family: "Intro";
@@ -46,6 +46,6 @@
         
     <!-- <p style="font-family: Intro">Nestle</p> -->
     <div id="container"></div>
-    <p style="font-family: Intro">Nestle</p>
+    <p style="font-family: FontFabric">Toledo</p>
 </body>
 </html>
