--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>::Condimentos::Malher::</title>
-    <meta name="description" content="Juego de condimentos Malher para tigres rojos.">
-    <meta property="og:title" content="Juego de condimentos Malher para tigres rojos." />
-    <meta property="og:image" content="https://condimentosmalher.web.app/assets/img/favicon.png" />
+    <title>::Toledo::</title>
+    <meta name="description" content="Juego de Toledo.">
+    <meta property="og:title" content="Juego de Toledo." />
+    <!--<meta property="og:image" content="https://condimentosmalher.web.app/assets/img/favicon.png" 
     <link rel="icon" type="image/png" href="assets/img/favicon.png"/>
-    <link rel="icon" type="image/png" href="https://condimentosmalher.web.app/assets/img/favicon.png"/> 
+    <link rel="icon" type="image/png" href="https://condimentosmalher.web.app/assets/img/favicon.png"/>-->
     <style>
       @font-face {
         font-family: "Fontfabric";
@@ -50,7 +50,7 @@
     <script type="css"></script>
     <script type="css" src=".src/popup.css"></script>
     <script src="./phaser.js"></script>
-    <script src=".src/constantes.js"></script>
+    <script src="./.src/constantes.js"></script>
     <script type="module" src=".src/productos.js"></script>
     <script type="module" src=".src/SceneD.js"></script>
     <script type="module" src=".src/SceneGame.js"></script>
