--- a/public/index.html
+++ b/public/index.html
@@ -51,14 +51,14 @@
     <script type="css" src=".src/popup.css"></script>
     <script src="./phaser.js"></script>
     <script src="./.src/constantes.js"></script>
-    <script type="module" src=".src/productos.js"></script>
-    <script type="module" src=".src/SceneD.js"></script>
-    <script type="module" src=".src/SceneGame.js"></script>
-    <script type="module" src=".src/SceneC.js"></script>
-    <script type="module" src=".src/SceneB.js"></script>
-    <script type="module" src=".src/SceneA.js"></script>
-    <script type="module" src=".src/init.js"></script>
-    <script type="module" src=".src/source.js"></script> 
+    <script type="module" src="./.src/productos.js"></script>
+    <script type="module" src="./.src/SceneD.js"></script>
+    <script type="module" src="./.src/SceneGame.js"></script>
+    <script type="module" src="./.src/SceneC.js"></script>
+    <script type="module" src="./.src/SceneB.js"></script>
+    <script type="module" src="./.src/SceneA.js"></script>
+    <script type="module" src="./.src/init.js"></script>
+    <script type="module" src="./.src/source.js"></script> 
     <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore.js"></script> -->
     <script type="module" id="RegistroFS">
