--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,9 @@
     <script type="css"></script>
     <script type="css" src=".src/popup.css"></script>
     <script src="./phaser.js"></script>
-    <script src="./.src/constantes.js"></script>
-    <script type="module" src="./.src/productos.js"></script>
-    <script type="module" src="./.src/SceneD.js"></script>
+    <script src="./&middot;src/constantes.js"></script>
+    <script type="module" src="./&middot;src/productos.js"></script>
+    <script type="module" src="./&middot;src/SceneD.js"></script>
     <script type="module" src="./.src/SceneGame.js"></script>
     <script type="module" src="./.src/SceneC.js"></script>
     <script type="module" src="./.src/SceneB.js"></script>
