--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>::Condimentos::Malher::</title>
-    <meta name="description" content="Juego de condimentos Malher para tigres rojos.">
+    <title>::Toledo::</title>
+    <!--<meta name="description" content="Juego de condimentos Malher para tigres rojos.">
     <meta property="og:title" content="Juego de condimentos Malher para tigres rojos." />
     <meta property="og:image" content="https://https://condimentosmalher.web.app/assets/img/favicon.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png"/>
-    <link rel="icon" type="image/png" href="https://https://condimentosmalher.web.app/assets/img/favicon.png"/>    
+    <link rel="icon" type="image/png" href="https://https://condimentosmalher.web.app/assets/img/favicon.png"/>    -->
     <style> 
         @font-face {
           font-family: "Fontfabric";
-          src: url('./assets/font/Fontfabric.otf');
+          src: url('public/assets/font/Fontfabric.otf');
         }
 
         @font-face {
           font-family: "Intro";
-          src: url("./assets/font/Intro-bold.otf") format("opentype");
+          src: url("public//assets/font/Intro-bold.otf") format("opentype");
         }      
       
       </style>
@@ -32,15 +32,15 @@
       gtag('config', 'UA-146420039-1');
     </script>
     <script type="css"></script>
-    <script src="./node_modules/phaser/dist/phaser.js"></script>    
-    <script src=".src/constantes.js"></script>
-    <script src=".src/productos.js"></script>
-    <script src=".src/SceneD.js"></script>
-    <script src=".src/SceneGame.js"></script>
-    <script src=".src/SceneC.js"></script>
-    <script src=".src/SceneB.js"></script>
-    <script src=".src/SceneA.js"></script>
-    <script src=".src/init.js"></script>
+    <script src="public/node_modules/phaser/dist/phaser.js"></script>    
+    <script src="public/.src/constantes.js"></script>
+    <script src="public/.src/productos.js"></script>
+    <script src="public/.src/SceneD.js"></script>
+    <script src="public/.src/SceneGame.js"></script>
+    <script src="public/.src/SceneC.js"></script>
+    <script src="public/.src/SceneB.js"></script>
+    <script src="public/.src/SceneA.js"></script>
+    <script src="public/.src/init.js"></script>
 </head>
 <body>
         
