--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <style>
       @font-face {
         font-family: "Fontfabric";
-        src: url('./assets/font/Fontfabric.otf');
+        src: url('public//assets/font/Fontfabric.otf');
       }
 
       @font-face {
@@ -49,16 +49,16 @@
 <body>    
     <script type="css"></script>
     <script type="css" src=".src/popup.css"></script>
-    <script src="./phaser.js"></script>
-    <script src=".src/constantes.js"></script>
-    <script type="module" src=".src/productos.js"></script>
-    <script type="module" src=".src/SceneD.js"></script>
-    <script type="module" src=".src/SceneGame.js"></script>
-    <script type="module" src=".src/SceneC.js"></script>
-    <script type="module" src=".src/SceneB.js"></script>
-    <script type="module" src=".src/SceneA.js"></script>
-    <script type="module" src=".src/init.js"></script>
-    <script type="module" src=".src/source.js"></script> 
+    <script src="public/./phaser.js"></script>
+    <script src="public/.src/constantes.js"></script>
+    <script type="module" src="public/.src/productos.js"></script>
+    <script type="module" src="public/.src/SceneD.js"></script>
+    <script type="module" src="public/.src/SceneGame.js"></script>
+    <script type="module" src="public/.src/SceneC.js"></script>
+    <script type="module" src="public/.src/SceneB.js"></script>
+    <script type="module" src="public/.src/SceneA.js"></script>
+    <script type="module" src="public/.src/init.js"></script>
+    <script type="module" src="public/.src/source.js"></script> 
     <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore.js"></script> -->
     <script type="module" id="RegistroFS">
