--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 <body>    
     <script type="css"></script>
     <script type="css" src=".src/popup.css"></script>
-    <script src="public/./phaser.js"></script>
+    <script src="public/phaser.js"></script>
     <script src="public/.src/constantes.js"></script>
     <script type="module" src="public/.src/productos.js"></script>
     <script type="module" src="public/.src/SceneD.js"></script>
