--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <meta property="og:image" content="https://condimentosmalher.web.app/assets/img/favicon.png" />
     <script type="css"></script>
     <script type="css" src=".src/popup.css"></script>
-    <script src="public/phaser.js"></script>
-    <script src="public/.src/constantes.js"></script>
-    <script type="module" src="public/.src/productos.js"></script>
-    <script type="module" src="public/.src/SceneD.js"></script>
-    <script type="module" src="public/.src/SceneGame.js"></script>
+    <script src="/public/phaser.js"></script>
+    <script src="/public/.src/constantes.js"></script>
+    <script type="module" src="/public/.src/productos.js"></script>
+    <script type="module" src="/public/.src/SceneD.js"></script>
+    <script type="module" src="/public/.src/SceneGame.js"></script>
     <script type="module" src="public/.src/SceneC.js"></script>
     <script type="module" src="public/.src/SceneB.js"></script>
     <script type="module" src="public/.src/SceneA.js"></script>
