--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
     <style>
       @font-face {
         font-family: "Fontfabric";
-        src: url('public/assets/font/Fontfabric.otf');
+        src: url('./assets/font/Fontfabric.otf');
       }
 
       @font-face {
         font-family: "Intro";
-        src: url("public/assets/font/Intro-Black.otf") format("opentype");
+        src: url("./assets/font/Intro-Black.otf") format("opentype");
       }    
 
       body {
@@ -51,14 +51,14 @@
     <script type="css" src=".src/popup.css"></script>
     <script src="./phaser.js"></script>
     <script src="./&middot;src/constantes.js"></script>
-    <script type="module" src="public/.src/productos.js"></script>
-    <script type="module" src="public/.src/SceneD.js"></script>
-    <script type="module" src="public/.src/SceneGame.js"></script>
-    <script type="module" src="public/.src/SceneC.js"></script>
-    <script type="module" src="public/.src/SceneB.js"></script>
-    <script type="module" src="public/.src/SceneA.js"></script>
-    <script type="module" src="public/.src/init.js"></script>
-    <script type="module" src="public/.src/source.js"></script> 
+    <script type="module" src="./.src/productos.js"></script>
+    <script type="module" src="./.src/SceneD.js"></script>
+    <script type="module" src="./.src/SceneGame.js"></script>
+    <script type="module" src="./.src/SceneC.js"></script>
+    <script type="module" src="./.src/SceneB.js"></script>
+    <script type="module" src="./.src/SceneA.js"></script>
+    <script type="module" src="./.src/init.js"></script>
+    <script type="module" src="./.src/source.js"></script> 
     <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore.js"></script> -->
     <script type="module" id="RegistroFS">
