--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <script type="css"></script>
     <script type="css" src=".src/popup.css"></script>
     <script src="./phaser.js"></script>
-    <script src="./&middot;src/constantes.js"></script>
+    <script src="./.src/constantes.js"></script>
     <script type="module" src="./.src/productos.js"></script>
     <script type="module" src="./.src/SceneD.js"></script>
     <script type="module" src="./.src/SceneGame.js"></script>
