--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,10 @@
     <script type="css" src=".src/popup.css"></script>
     <script src="./phaser.js"></script>
     <script src="./.src/constantes.js"></script>
-    <script type="module" src="./.src/productos.js"></script>
-    <script type="module" src="./.src/SceneD.js"></script>
+    <script type="module" src="/public/.src/productos.js"></script>
+    <script type="module" src="./public/.src/SceneD.js"></script>
     <script type="module" src="./.src/SceneGame.js"></script>
-    <script type="module" src="./.src/SceneC.js"></script>
+    <script type="module" src="/.src/SceneC.js"></script>
     <script type="module" src="./.src/SceneB.js"></script>
     <script type="module" src="./.src/SceneA.js"></script>
     <script type="module" src="./.src/init.js"></script>
