--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>::Toledo::</title>
     <meta name="description" content="Juego de Toledo.">
     <meta property="og:title" content="Juego de Toledo." />
-    <!--<meta property="og:image" content="https://condimentosmalher.web.app/assets/img/favicon.png" 
+    <!--<meta property="og:image" content="https://condimentosmalher.web.app/assets/img/favicon.png"  -->
     <script type="css"></script>
     <script type="css" src=".src/popup.css"></script>
     <script src="/public/phaser.js"></script>
