--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     </script>
     <script type="css"></script>
     <script src="public/node_modules/phaser/dist/phaser.js"></script>    
-    <script src="public/.src/constantes.js"></script>
-    <script src="public/.src/productos.js"></script>
-    <script src="public/.src/SceneD.js"></script>
-    <script src="public/.src/SceneGame.js"></script>
-    <script src="public/.src/SceneC.js"></script>
-    <script src="public/.src/SceneB.js"></script>
-    <script src="public/.src/SceneA.js"></script>
-    <script src="public/.src/init.js"></script>
+    <script src="public/src/constantes.js"></script>
+    <script src="public/src/productos.js"></script>
+    <script src="public/src/SceneD.js"></script>
+    <script src="public/src/SceneGame.js"></script>
+    <script src="public/src/SceneC.js"></script>
+    <script src="public/src/SceneB.js"></script>
+    <script src="public/src/SceneA.js"></script>
+    <script src="public/src/init.js"></script>
 </head>
 <body>
         
