--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,17 @@
     <meta property="og:title" content="Juego de Toledo." />
     <!--<meta property="og:image" content="https://condimentosmalher.web.app/assets/img/favicon.png" 
     <script type="css"></script>
-    <script type="css" src=".src/popup.css"></script>
+    <script type="css" src="src/popup.css"></script>
     <script src="/public/phaser.js"></script>
-    <script src="/public/.src/constantes.js"></script>
-    <script type="module" src="/public/.src/productos.js"></script>
-    <script type="module" src="/public/.src/SceneD.js"></script>
-    <script type="module" src="/public/.src/SceneGame.js"></script>
-    <script type="module" src="public/.src/SceneC.js"></script>
-    <script type="module" src="public/.src/SceneB.js"></script>
-    <script type="module" src="public/.src/SceneA.js"></script>
-    <script type="module" src="public/.src/init.js"></script>
-    <script type="module" src="public/.src/source.js"></script> 
+    <script src="/public/src/constantes.js"></script>
+    <script type="module" src="/public/src/productos.js"></script>
+    <script type="module" src="/public/src/SceneD.js"></script>
+    <script type="module" src="/public/src/SceneGame.js"></script>
+    <script type="module" src="public/src/SceneC.js"></script>
+    <script type="module" src="public/src/SceneB.js"></script>
+    <script type="module" src="public/src/SceneA.js"></script>
+    <script type="module" src="public/src/init.js"></script>
+    <script type="module" src="public/src/source.js"></script> 
     <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore.js"></script> -->
     <script type="module" id="RegistroFS">
