--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 </head>
 <body>    
     <script src="./node_modules/phaser/dist/phaser.js"></script>
-    <script src=".src/base.js"></script>
+    <script src="src/base.js"></script>
     <div id="container"></div>
 </body>
 </html>
