--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>::Toledo::</title>
     <meta name="description" content="Juego de Toledo.">
     <meta property="og:title" content="Juego de Toledo." />
-    <!--<meta property="og:image" content="https://condimentosmalher.web.app/assets/img/favicon.png"  -->
+<!--<meta property="og:image" content="https://condimentosmalher.web.app/assets/img/favicon.png"  -->
     <script type="css"></script>
     <script type="css" src="src/popup.css"></script>
     <script src="public/phaser.js"></script>
@@ -19,16 +19,10 @@
     <script type="module" src="public/src/SceneB.js"></script>
     <script type="module" src="public/src/SceneA.js"></script>
     <script type="module" src="public/src/init.js"></script>
-    <script type="module" src="public/src/source.js"></script> 
-    <!-- <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore.js"></script> -->
-    <script type="module" id="RegistroFS">
+    <!-- <script type="module" src="public/src/source.js"></script> 
+    <script type="module" id="RegistroFS"> -->
       
-      // Initialize Firebase
-      //firebase.initializeApp(firebaseConfig);
-    </script>
-    <!--<link rel="icon" type="image/png" href="assets/img/favicon.png"/>
-    <link rel="icon" type="image/png" href="https://condimentosmalher.web.app/assets/img/favicon.png"/>-->
+  </script>
     <style>
       @font-face {
         font-family: "Fontfabric";
